--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
-		"test": "jest --config=jest.config.json"
+		"test": "jest --config=jest.config.json",
+		"start": "node server/server.js",
+		"heroku-postbuild": "npm run build:prod"
 	},
 	"dependencies": {
 		"@babel/core": "^7.10.5",
@@ -28,6 +30,7 @@
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
 		"enzyme-to-json": "^3.5.0",
+		"express": "^4.17.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"jest": "^26.1.0",
 		"live-server": "^1.2.1",
