--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"author": "Ramsay Sewell",
 	"license": "MIT",
 	"scripts": {
-		"serve": "live-server public/",
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
@@ -27,13 +26,9 @@
 		"babel-preset-env": "1.7.0",
 		"babel-preset-react": "6.24.1",
 		"css-loader": "^3.6.0",
-		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.2",
-		"enzyme-to-json": "^3.5.0",
 		"express": "^4.17.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"jest": "^26.1.0",
-		"live-server": "^1.2.1",
 		"moment": "^2.27.0",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
@@ -45,14 +40,19 @@
 		"react-modal": "^3.11.2",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
-		"react-test-renderer": "^16.13.1",
 		"redux": "^4.0.5",
 		"sass-loader": "^9.0.2",
 		"style-loader": "^1.2.1",
 		"uuid": "^8.2.0",
 		"validator": "13.1.1",
 		"webpack": "4.43.0",
-		"webpack-cli": "^3.3.12",
+		"webpack-cli": "^3.3.12"
+	},
+	"devDependencies": {
+		"enzyme": "^3.11.0",
+		"enzyme-to-json": "^3.5.0",
+		"jest": "^26.1.0",
+		"react-test-renderer": "^16.13.1",
 		"webpack-dev-server": "^3.11.0"
 	}
 }
