--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build:dev": "webpack",
 		"build:prod": "webpack -p --env production",
 		"dev-server": "webpack-dev-server",
-		"test": "jest --config=jest.config.json",
+		"test": "cross-env NODE_ENV=test jest --config=jest.config.json",
 		"start": "node server/server.js",
 		"heroku-postbuild": "npm run build:prod"
 	},
@@ -29,6 +29,7 @@
 		"enzyme-adapter-react-16": "^1.15.2",
 		"express": "^4.17.1",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
+		"firebase": "^7.17.1",
 		"moment": "^2.27.0",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
@@ -42,6 +43,8 @@
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
+		"redux-mock-store": "^1.5.4",
+		"redux-thunk": "^2.3.0",
 		"sass-loader": "^9.0.2",
 		"style-loader": "^1.2.1",
 		"uuid": "^8.2.0",
@@ -50,6 +53,8 @@
 		"webpack-cli": "^3.3.12"
 	},
 	"devDependencies": {
+		"cross-env": "^7.0.2",
+		"dotenv": "^8.2.0",
 		"enzyme": "^3.11.0",
 		"enzyme-to-json": "^3.5.0",
 		"jest": "^26.1.0",
