--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
 		"heroku-postbuild": "npm run build:prod"
 	},
 	"dependencies": {
-		"@babel/core": "^7.10.5",
+		"@babel/core": "^7.11.6",
 		"@babel/plugin-proposal-class-properties": "^7.10.4",
-		"@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-		"@babel/preset-env": "^7.10.4",
+		"@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+		"@babel/preset-env": "^7.11.5",
 		"@babel/preset-react": "^7.10.4",
 		"babel-cli": "6.26.0",
 		"babel-core": "6.26.3",
@@ -25,11 +25,12 @@
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
 		"babel-preset-env": "1.7.0",
 		"babel-preset-react": "6.24.1",
-		"css-loader": "^3.6.0",
-		"enzyme-adapter-react-16": "^1.15.2",
+		"css-loader": "^4.2.2",
+		"enzyme-adapter-react-16": "^1.15.4",
 		"express": "^4.17.1",
-		"extract-text-webpack-plugin": "^4.0.0-beta.0",
-		"firebase": "^7.17.1",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"firebase": "^7.19.1",
+		"history": "^5.0.0",
 		"moment": "^2.27.0",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
@@ -40,16 +41,16 @@
 		"react-dates": "^21.8.0",
 		"react-dom": "16.13.1",
 		"react-modal": "^3.11.2",
-		"react-redux": "^7.2.0",
+		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
 		"redux": "^4.0.5",
 		"redux-mock-store": "^1.5.4",
 		"redux-thunk": "^2.3.0",
-		"sass-loader": "^9.0.2",
+		"sass-loader": "^10.0.2",
 		"style-loader": "^1.2.1",
-		"uuid": "^8.2.0",
+		"uuid": "^8.3.0",
 		"validator": "13.1.1",
-		"webpack": "4.43.0",
+		"webpack": "4.44.1",
 		"webpack-cli": "^3.3.12"
 	},
 	"devDependencies": {
@@ -57,7 +58,8 @@
 		"dotenv": "^8.2.0",
 		"enzyme": "^3.11.0",
 		"enzyme-to-json": "^3.5.0",
-		"jest": "^26.1.0",
+		"jest": "^26.4.2",
+		"mini-css-extract-plugin": "^0.11.0",
 		"react-test-renderer": "^16.13.1",
 		"webpack-dev-server": "^3.11.0"
 	}
