--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"express": "^4.17.1",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"firebase": "^7.19.1",
-		"history": "^5.0.0",
+		"history": "4.10.1",
 		"moment": "^2.27.0",
 		"node-sass": "^4.14.1",
 		"normalize.css": "^8.0.1",
@@ -42,7 +42,7 @@
 		"react-dom": "16.13.1",
 		"react-modal": "^3.11.2",
 		"react-redux": "^7.2.1",
-		"react-router-dom": "^5.2.0",
+		"react-router-dom": "5.2.0",
 		"redux": "^4.0.5",
 		"redux-mock-store": "^1.5.4",
 		"redux-thunk": "^2.3.0",
