--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
 		"babel-loader": "^8.1.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
 		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "1.7.0",
 		"babel-preset-react": "6.24.1",
 		"css-loader": "^4.2.2",
 		"enzyme-adapter-react-16": "^1.15.4",
 		"express": "^4.17.1",
-		"extract-text-webpack-plugin": "^3.0.2",
+		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"firebase": "^7.19.1",
 		"history": "4.10.1",
 		"moment": "^2.27.0",
@@ -46,7 +47,8 @@
 		"redux": "^4.0.5",
 		"redux-mock-store": "^1.5.4",
 		"redux-thunk": "^2.3.0",
-		"sass-loader": "^10.0.2",
+		"resolve-url-loader": "^3.1.1",
+		"sass-loader": "^7.1.0",
 		"style-loader": "^1.2.1",
 		"uuid": "^8.3.0",
 		"validator": "13.1.1",
@@ -61,6 +63,7 @@
 		"jest": "^26.4.2",
 		"mini-css-extract-plugin": "^0.11.0",
 		"react-test-renderer": "^16.13.1",
+		"url-loader": "^4.1.0",
 		"webpack-dev-server": "^3.11.0"
 	}
 }
